WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
82608
Chromium: DRT --no-timeout option doesn't work
https://bugs.webkit.org/show_bug.cgi?id=82608
Summary
Chromium: DRT --no-timeout option doesn't work
Ilya Tikhonovsky
Reported
2012-03-29 06:21:59 PDT
%subj%
Attachments
Patch
(1.52 KB, patch)
2012-03-29 06:24 PDT
,
Ilya Tikhonovsky
no flags
Details
Formatted Diff
Diff
Patch
(1.69 KB, patch)
2012-03-29 06:51 PDT
,
Ilya Tikhonovsky
no flags
Details
Formatted Diff
Diff
Patch
(1.69 KB, patch)
2012-03-29 07:12 PDT
,
Ilya Tikhonovsky
no flags
Details
Formatted Diff
Diff
Patch
(2.02 KB, patch)
2012-03-29 07:27 PDT
,
Ilya Tikhonovsky
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Ilya Tikhonovsky
Comment 1
2012-03-29 06:24:51 PDT
Created
attachment 134562
[details]
Patch
Yury Semikhatsky
Comment 2
2012-03-29 06:34:06 PDT
Comment on
attachment 134562
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=134562&action=review
> Tools/ChangeLog:5 > +
Please provide some description.
> Tools/DumpRenderTree/chromium/DumpRenderTree.cpp:251 > + shell.initialize();
Why initialize is called after all the setters above?
Ilya Tikhonovsky
Comment 3
2012-03-29 06:51:44 PDT
Created
attachment 134568
[details]
Patch
Ilya Tikhonovsky
Comment 4
2012-03-29 07:12:21 PDT
Created
attachment 134573
[details]
Patch
Ilya Tikhonovsky
Comment 5
2012-03-29 07:27:47 PDT
Created
attachment 134579
[details]
Patch
Ilya Tikhonovsky
Comment 6
2012-03-29 11:28:06 PDT
Comment on
attachment 134579
[details]
Patch Clearing flags on attachment: 134579 Committed
r112552
: <
http://trac.webkit.org/changeset/112552
>
Ilya Tikhonovsky
Comment 7
2012-03-29 11:28:15 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug