Web Inspector: chromium: DRT --no-timeout option doesn't work. https://bugs.webkit.org/show_bug.cgi?id=82608

Initial value for m_timeout was initialized in constructor and was overwritten in DRT::main.
This was broken by r112354 and the sequence became opposite.

Reviewed by Yury Semikhatsky.

* DumpRenderTree/chromium/TestShell.cpp:
(TestShell::TestShell):
(TestShell::initialize):

Canonical link: https://commits.webkit.org/99960@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@112552 268f45cc-cd09-0410-ab3c-d52691b4dbfc